# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
src/test_utils/: helpers.rs
tests/: health_check.rs  sign_up_for_newletter.rs
